--- a/elements/route-tile-manager.html
+++ b/elements/route-tile-manager.html
@@ -21,8 +21,8 @@
     </div>
     <div flex>
       <polymer-flex-layout vertical></polymer-flex-layout>
-      <route-tile-lights messenger="{{messenger}}" lights="(1|2)" flex></route-tile-lights>
-      <route-tile-lights messenger="{{messenger}}" lights="(3)" flex></route-tile-lights>
+      <route-tile-lights messenger="{{messenger}}" lights="(1|2)" name="lights" flex></route-tile-lights>
+      <route-tile-lights messenger="{{messenger}}" lights="(3)" name="lamp" flex></route-tile-lights>
     </div>
   </template>
   <script>
