--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,400' rel='stylesheet' type='text/css'>
+
   <script type="text/javascript" src="components/platform/platform.js"></script>
   <script type="text/javascript" src="components/web-animations-js/web-animations.js"></script>
   <link rel="import" href="elements/route-app.html" />
