--- a/elements/route-tile-manager.html
+++ b/elements/route-tile-manager.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../components/polymer/polymer.html">
 <link rel="import" href="../components/polymer-flex-layout/polymer-flex-layout.html">
-<link rel="import" href="route-tile.html">
+<link rel="import" href="./route-tile/route-tile.html">
 <link rel="import" href="route-tile-media.html">
 <link rel="import" href="route-tile-lights.html">
 
