--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
   <script type="text/javascript" src="components/platform/platform.js"></script>
   <script type="text/javascript" src="components/web-animations-js/web-animations.js"></script>
   <link rel="import" href="elements/route-app.html" />
+
+  <style type="text/css">
+    * {
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+  </style>
 </head>
 
 <body>
