--- a/elements/route-app.html
+++ b/elements/route-app.html
@@ -1,26 +1,42 @@
 <link rel="import" href="../components/polymer/polymer.html">
-<link rel="import" href="../components/polymer-flex-layout/polymer-flex-layout.html">
-<link rel="import" href="route-tile-manager.html">
-<link rel="import" href="route-menu-bar.html">
-<link rel="import" href="route-messenger.html">
+<link rel="import" href="../components/polymer-page/polymer-page.html">
+<link rel="import" href="route-tile-layout/route-tile-layout.html">
+<link rel="import" href="route-ui-tile/route-ui-tile.html">
 
 <polymer-element name="route-app" attributes="">
   <template>
     <link rel="stylesheet" href="css/route-app.css">
 
-    <route-messenger id="messenger"></route-messenger>
+    <polymer-page></polymer-page>
 
-    <polymer-flex-layout></polymer-flex-layout>
+    <section id="tiles">
+      <route-tile-layout id="tileLayout" layout="{{layout}}"></route-tile-layout>
+      <route-ui-tile></route-ui-tile>
+      <route-ui-tile></route-ui-tile>
 
-    <route-tile-manager messenger="{{$.messenger.socket}}"></route-tile-manager>
-    <route-menu-bar flex></route-menu-bar>
+      <route-ui-tile></route-ui-tile>
+      <route-ui-tile></route-ui-tile>
+      <route-ui-tile></route-ui-tile>
+      <route-ui-tile></route-ui-tile>
+    </section>
 
   </template>
   <script>
     (function() {
       Polymer("route-app", {
-        ready: function() {},
+        layout: [
+          [1, 1, 1, 1, 2, 2],
+          [1, 1, 1, 1, 2, 2],
+          [1, 1, 1, 1, 3, 4],
+          [1, 1, 1, 1, 5, 6],
+        ],
+        ready: function() {
+          window.addEventListener("resize", this.resize.bind(this));
+        },
         enteredView: function() {},
+        resize: function(e) {
+          this.$.tileLayout.invalidate();
+        }
       });
     })();
   </script>
