--- a/elements/route-tile-manager.html
+++ b/elements/route-tile-manager.html
@@ -8,56 +8,26 @@
   <template>
     <link rel="stylesheet" href="css/route-tile-manager.css">
 
-    <polymer-flex-layout></polymer-flex-layout>
-    <div flex>
-      <polymer-flex-layout vertical></polymer-flex-layout>
-      <div class="wrapper" flex>
-        <route-ui-tile>
-          <route-block-media messenger="{{messenger}}"></route-block-media>
-        </route-ui-tile>
-      </div>
-      <div class="wrapper" flex>
-        <route-ui-tile></route-ui-tile>
-      </div>
-    </div>
-    <div flex>
-      <polymer-flex-layout vertical></polymer-flex-layout>
-      <div class="wrapper" flex>
-        <route-ui-tile></route-ui-tile>
-      </div>
-      <div class="wrapper" flex>
-        <route-ui-tile></route-ui-tile>
-      </div>
-    </div>
-    <div flex>
-      <polymer-flex-layout vertical></polymer-flex-layout>
-      <div class="wrapper" flex>
-        <route-ui-tile>
-          <route-block-lights messenger="{{messenger}}" lights="(1|2)" name="lights"></route-block-lights>
-        </route-ui-tile>
-      </div>
-      <div class="wrapper" flex>
-        <route-ui-tile>
-          <route-block-lights messenger="{{messenger}}" lights="(3)" name="lamp"></route-block-lights>
-        </route-ui-tile>
-      </div>
-    </div>
+    <route-tile-layout id="tileLayout" auto layout="{{layout}}"></route-tile-layout>
+
+    <route-ui-tile></route-ui-tile>
+    <route-ui-tile></route-ui-tile>
+    <route-ui-tile></route-ui-tile>
+
   </template>
   <script>
     (function() {
       Polymer("route-tile-manager", {
+        layout: [
+          [1, 1, 2],
+          [1, 1, 3],
+        ],
         ready: function() {
           window.addEventListener("resize", this.screenSizeChange.bind(this));
-          this.screenSizeChange();
         },
         enteredView: function() {},
         screenSizeChange: function(e) {
-          var w = window.innerWidth - 32,
-              h = window.innerHeight - 32,
-              u = Math.floor(Math.min(w/3, h/2));
-          console.log(w, h, u, this.$.tiles);
-          this.style.width = u * 3 + "px";
-          this.style.height = u * 2 + "px";
+          this.$.tileLayout.invalidate();
         },
       });
     })();
