--- a/elements/route-app.html
+++ b/elements/route-app.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../components/polymer/polymer.html">
 <link rel="import" href="../components/polymer-page/polymer-page.html">
+<link rel="import" href="../components/polymer-flex-layout/polymer-flex-layout.html">
 <link rel="import" href="route-tile-layout/route-tile-layout.html">
 <link rel="import" href="route-ui-tile/route-ui-tile.html">
 
@@ -7,28 +8,36 @@
   <template>
     <link rel="stylesheet" href="css/route-app.css">
 
-    <polymer-page></polymer-page>
+    <!-- <polymer-page></polymer-page> -->
 
-    <section id="tiles">
-      <route-tile-layout id="tileLayout" layout="{{layout}}"></route-tile-layout>
-      <route-ui-tile></route-ui-tile>
-      <route-ui-tile></route-ui-tile>
+    <div id="page">
+      <polymer-flex-layout></polymer-flex-layout>
 
-      <route-ui-tile></route-ui-tile>
-      <route-ui-tile></route-ui-tile>
-      <route-ui-tile></route-ui-tile>
-      <route-ui-tile></route-ui-tile>
-    </section>
+      <div style="position: relative" flex>
+        <section id="tiles">
+          <route-tile-layout id="tileLayout" layout="{{layout}}"></route-tile-layout>
+          <route-ui-tile></route-ui-tile>
+          <route-ui-tile></route-ui-tile>
+
+          <route-ui-tile></route-ui-tile>
+          <route-ui-tile></route-ui-tile>
+          <route-ui-tile></route-ui-tile>
+          <route-ui-tile></route-ui-tile>
+        </section>
+      </div>
+
+      <section id="bar">
+        BAR
+      </section>
+    </div>
 
   </template>
   <script>
     (function() {
       Polymer("route-app", {
         layout: [
-          [1, 1, 1, 1, 2, 2],
-          [1, 1, 1, 1, 2, 2],
-          [1, 1, 1, 1, 3, 4],
-          [1, 1, 1, 1, 5, 6],
+          [1, 2, 3],
+          [4, 5, 6],
         ],
         ready: function() {
           window.addEventListener("resize", this.resize.bind(this));
