--- a/elements/route-tile-layout/route-tile-layout.html
+++ b/elements/route-tile-layout/route-tile-layout.html
@@ -51,61 +51,9 @@
         }
       });
 
-      var colCount, colOwners, rowCount, rowOwners;
-
-      function matrixillate(matrix) {
-        // mesaure the matrix, must be rectangular
-        rowCount = matrix.length;
-        colCount = rowCount && matrix[0].length || 0;
-        // transpose matrix
-        var transpose = [];
-        for (var i=0; i<colCount; i++) {
-          var c = [];
-          for (var j=0; j<rowCount; j++) {
-            c.push(matrix[j][i]);
-          }
-          transpose.push(c);
-        }
-        // assign sizing control
-        colOwners = findOwners(matrix);
-        rowOwners = findOwners(transpose);
-      }
-
-      function findOwners(matrix) {
-        var majCount = matrix.length;
-        var minCount = majCount && matrix[0].length || 0;
-        var owners = [];
-        // for each column (e.g.)
-        for (var i=0; i<minCount; i++) {
-          // array of contained areas
-          var contained = {};
-          // look at each row to find a containing area
-          for (var j=0; j<majCount; j++) {
-            // get the row vector
-            var vector = matrix[j]
-            // node index at [i,j]
-            var nodei = vector[i];
-            // if a node is there
-            if (nodei) {
-              // determine if it bounds this column
-              var owns = false;
-              if (i === 0) {
-                owns = (i === minCount-1) || (nodei !== vector[i+1]);
-              } else if (i === minCount - 1) {
-                owns = (i === 0) || (nodei !== vector[i-1]);
-              } else {
-                owns = nodei !== vector[i-1] && nodei !== vector[i+1];
-              }
-              if (owns) {
-                contained[nodei] = 1;
-              }
-            }
-            // store the owners for this column
-            owners[i] = contained;
-          }
-        }
-        return owners;
-      }
+      var colCount, rowCount;
+      var unit;
+      var m = 0;
 
       // TODO: this code tries to preserve actual position,
       // so 'unposition' is really 'naturalize' or something
@@ -138,13 +86,12 @@
         return Math.min(h, w);
       }
 
-      var unit;
-      var m = 0;
-
       function layout(matrix, anodes, parent) {
         console.log("LAYOUT CALLED");
         nodes = anodes;
-        matrixillate(matrix);
+
+        rowCount = matrix.length;
+        colCount = rowCount && matrix[0].length || 0;
 
         nodes.forEach(unposition);
 
